--- a/mission-04/grid.css
+++ b/mission-04/grid.css
@@ -1,8 +1,8 @@
-@import url("./mission-01/css/base.css");
-@import url("./mission-01/css/normalize.css");
-@import url("./mission-01/css/reset.css");
-@import url("./mission-01/css/theme.css");
-@import url("./mission-01/css/grid.css");
+@import url("./../mission-01/css/base.css");
+@import url("./../mission-01/css/normalize.css");
+@import url("./../mission-01/css/reset.css");
+@import url("./../mission-01/css/theme.css");
+@import url("./../mission-01/css/grid.css");
 
 
 
